~~~~~~~~~~~~~~~~
version 8.0.2
~~~~~~~~~~~~~~~~

* fix an issue on harvester file not defined (python 3 compat)
* add a simple install for setoolkit (setup.py)
* teensy remove old path generation location /usr/share/set to /usr/share/setoolkit
* fixed raw_input issue for python3
* changed env variable to python3

~~~~~~~~~~~~~~~~
version 8.0.1
~~~~~~~~~~~~~~~~

* fix an issue when using import on web clone
* fix an issue when using hta attack vector would just put you out to main menu

~~~~~~~~~~~~~~~~
version 8.0
~~~~~~~~~~~~~~~~

* fix an issue that caused metasploit web server to not properly work with apache_server to off
* changed arduino powershell shellcode to https instead of http
* fixed bug that would not generate powershell encoded code when using arduino
* fixed a sudo check for SET when not running as root would cause a log error exception
* removed setup.py in favor of requirements.txt - no longer needed
* updated readme and install documentation to reflect new install procedures through requirements.txt
* updated copyright information to 2019
* removed irc channel, no longer active or used
* removed old sms phishing menu - spoofmytext never fixed their API and no longer supported
* removed full screen attack - no longer supported or maintained
* removed html generation from web attack, no longer supported

~~~~~~~~~~~~~~~~
version 7.7.9
~~~~~~~~~~~~~~~~

* fix source.js not copying over when using tabnabbing
* bump config version and add default apache dir to /var/www/html
* fix sendmail not found on OSX when using phishing emails

~~~~~~~~~~~~~~~~
version 7.7.8
~~~~~~~~~~~~~~~~

* fix ident issue on harvester throwing templates off

~~~~~~~~~~~~~~~~
version 7.7.7
~~~~~~~~~~~~~~~~

* remove old test code
* add better wording for templates
* remove old templates yahoo and facebook
* add better descriptions for using NAT/External IP addresses for credential harvester
* fix if a custom PDF is selected, it won't default to a blank pdf